# cupti_test

./: CMakeLists.txt  README.md  autorange.cpp  callback.cpp  extensions.h  kernel.cuh  log  metrics.sh
.github/workflows/: test.yml
